Revision history for Number-AnyBase

{{$NEXT}}

1.00000       2012-12-31 07:05:49 Europe/Rome

   * First release.